# vibez

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.notes/: PRIME_DIRECTION.md  REFACTORING-GUIDE.md  ROADMAP-to-ableton-replacement.md  design-automation.md  design-mix-desk.md  dogfood-2026-07-03.md  feature-mix-desk.md  new-requirements.md
.notes/archive/2026-04-18-pre-track-factory/: dsp-reference-implementations.md
.notes/archive/2026-04-18-pre-track-factory/research/: ai-sample-generation-models.md  marketplace-architecture.md  midi-generation-models.md  next-gen-ai-daw-ux.md  plugin-marketplace-research.md
.notes/archive/2026-04-18-pre-track-factory/research/ai/: SUMMARY.md  ai-strategy.md  landscape.md  midi-generation.md  sample-generation.md  stem-separation.md  ux-paradigms.md  vision.md
.notes/archive/2026-04-18-pre-track-factory/research/marketplace/: SUMMARY.md  architecture.md  (+1 more)
assets/: demo.vibez
assets/fonts/ibm-plex/: README.md
assets/icon/: vibez-64.rgba
assets/linux/: vibez.desktop
crates/vibez-audio-io/: Cargo.toml
crates/vibez-audio-io/src/: audio_host.rs  audio_stream.rs  file_io.rs  lib.rs  midi_input.rs
crates/vibez-audio-io/tests/: audio_format_matrix.rs
crates/vibez-audio-io/tests/fixtures/: README.md  mono-32000-s24.flac  stereo-44100.m4a  stereo-48000-s24.aiff
crates/vibez-core/: Cargo.toml
crates/vibez-core/src/: audio_buffer.rs  audio_format.rs  automation.rs  constants.rs  effect.rs  id.rs  lib.rs  midi.rs  onset.rs  perform.rs  phrase_variation.rs  time.rs  track.rs
crates/vibez-dropbox/: Cargo.toml
crates/vibez-dropbox/src/: api.rs  cache.rs  lib.rs  oauth.rs  settings.rs  types.rs
crates/vibez-dsp/: Cargo.toml
crates/vibez-dsp/src/: auto_pan.rs  bitcrush.rs  compressor.rs  delay.rs  drive.rs  effect.rs  eq.rs  factory.rs  filter.rs  gain.rs  gate.rs  lib.rs  phaser.rs  reverb.rs  time_stretch.rs
crates/vibez-engine/: Cargo.toml
crates/vibez-engine/src/: commands.rs  engine.rs  engine_audition.rs  engine_automation_commands.rs  engine_capture_tests.rs  engine_clip_groove_tests.rs  engine_clock.rs  engine_drain_commands.rs  engine_mute_automation_tests.rs  engine_mute_event_tests.rs  engine_note_repeat_tests.rs  engine_render.rs  engine_section_playback_tests.rs  engine_section_queue.rs  engine_section_queue_tests.rs  engine_section_record.rs  engine_section_record_tests.rs  engine_stuck_note_tests.rs  engine_tests.rs  events.rs  lib.rs  metering.rs  mixer.rs  note_repeat.rs  playback_source.rs  render.rs  transport.rs
crates/vibez-engine/src/mixer/: channel_strip.rs  effect_slot.rs  groove.rs  note_repeat.rs  pan.rs  render_context.rs
crates/vibez-instruments/: Cargo.toml
crates/vibez-instruments/src/: drum_rack.rs  envelope.rs  lib.rs  sampler.rs  synth.rs
crates/vibez-plugin-host/: Cargo.toml
crates/vibez-plugin-host/examples/: scan_dir.rs  vst3_probe.rs
crates/vibez-plugin-host/src/: buffer.rs  format.rs  gui.rs  info.rs  instance.rs  lib.rs  paths.rs  scan_helper.rs  scanner.rs  settings.rs  state.rs
crates/vibez-plugin-host/src/clap_host/: host_impl.rs  instance.rs  scanner.rs
crates/vibez-plugin-host/src/vst3_host/: bstream.rs  host_context.rs  host_impl.rs  instance.rs  mod.rs  runloop.rs  scanner.rs
crates/vibez-plugin-host/src/wrappers/: effect.rs  instrument.rs  mod.rs
crates/vibez-project/: Cargo.toml
crates/vibez-project/src/: lib.rs  project_format_v1.rs  project_format_v1_proof.rs  templates.rs
crates/vibez-project/tests/: project_format_v1.rs  project_format_v1_proof.rs
crates/vibez-ui/: Cargo.toml
crates/vibez-ui/examples/: make_demo.rs
crates/vibez-ui/src/: app.rs  icons.rs  lib.rs  message.rs  plugin_window.rs  remote_provider.rs  spectrum.rs  state.rs  theme.rs  themes.rs  timeline_geometry.rs  typography.rs  ui_settings.rs  warp.rs
crates/vibez-ui/src/app/: actions.rs  async_helpers.rs  audio_tasks.rs  bounce.rs  capture.rs  dropbox_io.rs  engine_events.rs  keyboard.rs  local_watcher.rs  media.rs  media_import.rs  menu_lifecycle.rs  mod.rs  plugins.rs  project_format_v1_tests.rs  project_io.rs  project_replay.rs  project_sections.rs  section_record.rs  tracked_request.rs  update.rs  update_media.rs  update_policy.rs  update_project.rs  update_remote.rs  update_timeline.rs  update_view.rs  views_arrangement.rs  views_automation.rs  views_browser.rs  views_browser_audition.rs  views_browser_places.rs  views_browser_remote.rs  views_browser_style.rs  views_clip_swing.rs  views_detail.rs  views_devices.rs  views_mixer.rs  views_overlays.rs  views_perform.rs  (+9 more)
crates/vibez-ui/src/domains/: arrangement.rs  automation.rs  browser.rs  browser_tests.rs  devices.rs  mod.rs  perform.rs  perform_focus_tests.rs  perform_note_repeat_tests.rs  perform_tests.rs  piano_roll.rs  project.rs  timeline_editor.rs  transport.rs  view.rs
crates/vibez-ui/src/domains/arrangement/: clipboard.rs  clipboard_tests.rs  media_ops.rs  messages.rs  mod.rs  ops.rs  test_support.rs  tests.rs
crates/vibez-ui/src/domains/perform/: capture.rs  input_mapping.rs  instrument.rs  instrument_tests.rs  note_repeat.rs  section_record.rs  sections.rs
crates/vibez-ui/src/domains/perform/capture/: performance_log.rs
crates/vibez-ui/src/services/: mod.rs  plugin_loader.rs
crates/vibez-ui/src/state/: browser_results.rs  browser_state.rs  mod.rs  snapshot.rs  ui_types.rs  undo_tests.rs
crates/vibez-ui/src/widgets/: audio_clip_detail.rs  automation_lane.rs  browser_drag_ghost.rs  browser_waveform.rs  double_click.rs  drag.rs  effect_knob.rs  effect_slot.rs  eq_display.rs  fader.rs  knob.rs  local_drag.rs  mini_waveform.rs  mixer_strip.rs  mod.rs  piano_roll.rs  swing_fader.rs  swing_knob.rs  timeline.rs  track_header.rs  vu_meter.rs  waveform.rs
crates/vibez-ui/src/widgets/piano_roll/: draw.rs  mod.rs
crates/vibez-ui/src/widgets/timeline/: clips.rs  clips_draw.rs  minimap.rs  mod.rs  ruler.rs
docs/: ARCHITECTURE.md  AUDIO_FORMAT_SUPPORT.md  PROJECT_FORMAT_V1_PROOF.md
packaging/macos/: Info.plist
packaging/windows/: vibez.iss
src/: main.rs
