[workspace]
members = [
    "crates/vibez-core",
    "crates/vibez-engine",
    "crates/vibez-audio-io",
    "crates/vibez-dsp",
    "crates/vibez-instruments",
    "crates/vibez-plugin-host",
    "crates/vibez-project",
    "crates/vibez-dropbox",
    "crates/vibez-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/vibez-daw/vibez"

[workspace.dependencies]
vibez-core = { path = "crates/vibez-core" }
vibez-engine = { path = "crates/vibez-engine" }
vibez-audio-io = { path = "crates/vibez-audio-io" }
vibez-dsp = { path = "crates/vibez-dsp" }
vibez-instruments = { path = "crates/vibez-instruments" }
vibez-plugin-host = { path = "crates/vibez-plugin-host" }
vibez-project = { path = "crates/vibez-project" }
vibez-dropbox = { path = "crates/vibez-dropbox" }
vibez-ui = { path = "crates/vibez-ui" }

# Audio
cpal = "0.16"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "aac", "pcm"] }
rubato = "0.16"
rtrb = "0.3"
audio_thread_priority = "0.32"
midir = "0.10"

# GUI
iced = { version = "0.13", features = ["canvas", "tokio"] }

# Shared
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"

[package]
name = "vibez"
version.workspace = true
description = "A small open-source DAW for electronic music"
edition.workspace = true
license.workspace = true

[dependencies]
vibez-ui = { workspace = true }
vibez-plugin-host = { workspace = true }
iced = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"

[package.metadata.deb]
maintainer = "Alex Wanyoike"
copyright = "2026 Alex Wanyoike"
license-file = ["LICENSE", "0"]
extended-description = "A small open-source DAW for electronic music, written in Rust. Multi-track arrangement, warping, piano roll, built-in instruments and effects, VST3/CLAP plugin hosting."
section = "sound"
depends = "$auto"
assets = [
    ["target/release/vibez", "usr/bin/", "755"],
    ["target/release/vibez-plugin-scan", "usr/bin/", "755"],
    ["assets/linux/vibez.desktop", "usr/share/applications/", "644"],
    ["assets/icon/vibez.svg", "usr/share/icons/hicolor/scalable/apps/vibez.svg", "644"],
    ["assets/icon/vibez-16.png", "usr/share/icons/hicolor/16x16/apps/vibez.png", "644"],
    ["assets/icon/vibez-32.png", "usr/share/icons/hicolor/32x32/apps/vibez.png", "644"],
    ["assets/icon/vibez-48.png", "usr/share/icons/hicolor/48x48/apps/vibez.png", "644"],
    ["assets/icon/vibez-64.png", "usr/share/icons/hicolor/64x64/apps/vibez.png", "644"],
    ["assets/icon/vibez-128.png", "usr/share/icons/hicolor/128x128/apps/vibez.png", "644"],
    ["assets/icon/vibez-256.png", "usr/share/icons/hicolor/256x256/apps/vibez.png", "644"],
    ["assets/icon/vibez-512.png", "usr/share/icons/hicolor/512x512/apps/vibez.png", "644"],
    ["assets/demo.vibez", "usr/share/vibez/demo.vibez", "644"],
]
