[package]
name = "vibez-dropbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vibez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time", "macros", "io-util", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dirs = "5"
url = "2"
base64 = "0.22"
thiserror = "2"
sha2 = "0.10"
getrandom = "0.2"
open = "5"

[dev-dependencies]
tempfile = "3"
