[package]
name = "vibez-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vibez-core = { workspace = true }
vibez-dsp = { workspace = true }
vibez-instruments = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap-sys = "0.5"
vst3 = "0.3"
libloading = "0.8"
libc = "0.2"
dirs = "5"
log = "0.4"
