[package]
name = "vibez-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vibez-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
