[package]
name = "vibez-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vibez-core = { workspace = true }
vibez-engine = { workspace = true }
vibez-audio-io = { workspace = true }
vibez-dsp = { workspace = true }
vibez-instruments = { workspace = true }
vibez-plugin-host = { workspace = true }
vibez-project = { workspace = true }
vibez-dropbox = { workspace = true }
iced = { workspace = true }
rtrb = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
rfd = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
x11rb = "0.13"
dirs = "5"

[dev-dependencies]
tempfile = "3"
